testdata/baselines/reference/submodule/compiler/errorInfoForRelatedIndexTypesNoConstraintElaboration.errors.txt
errorInfoForRelatedIndexTypesNoConstraintElaboration.ts(6,15): error TS2322: Type 'IntrinsicElements[T1]' is not assignable to type 'IntrinsicElements[T2]'.
  Type 'T1' is not assignable to type 'T2'.


==== errorInfoForRelatedIndexTypesNoConstraintElaboration.ts (1 errors) ====
    /// <reference path="/.lib/react16.d.ts" />
    
    class I<T1 extends keyof JSX.IntrinsicElements, T2 extends keyof JSX.IntrinsicElements> {
        M() {
            let c1: JSX.IntrinsicElements[T1] = {};
            const c2: JSX.IntrinsicElements[T2] = c1;
                  ~~
!!! error TS2322: Type 'IntrinsicElements[T1]' is not assignable to type 'IntrinsicElements[T2]'.
!!! error TS2322:   Type 'T1' is not assignable to type 'T2'.
        }
    }